Release/2.1.0 (#106)
* Bump camunda.version from 7.23.0 to 7.24.0

Bumps `camunda.version` from 7.23.0 to 7.24.0.

Updates `org.camunda.bpm:camunda-engine` from 7.23.0 to 7.24.0

Updates `org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-test` from 7.23.0 to 7.24.0

Updates `org.camunda.bpm:camunda-bpm-junit5` from 7.23.0 to 7.24.0

---
updated-dependencies:
- dependency-name: org.camunda.bpm:camunda-engine
  dependency-version: 7.24.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
- dependency-name: org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-test
  dependency-version: 7.24.0
  dependency-type: direct:development
  update-type: version-update:semver-minor
- dependency-name: org.camunda.bpm:camunda-bpm-junit5
  dependency-version: 7.24.0
  dependency-type: direct:development
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Rename method to GetMigrationInstructions

* Bump com.diffplug.spotless:spotless-maven-plugin from 3.1.0 to 3.2.0

Bumps [com.diffplug.spotless:spotless-maven-plugin](https://github.com/diffplug/spotless) from 3.1.0 to 3.2.0.
- [Release notes](https://github.com/diffplug/spotless/releases)
- [Changelog](https://github.com/diffplug/spotless/blob/main/CHANGES.md)
- [Commits](https://github.com/diffplug/spotless/compare/lib/3.1.0...lib/3.2.0)

---
updated-dependencies:
- dependency-name: com.diffplug.spotless:spotless-maven-plugin
  dependency-version: 3.2.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* added jacoco code coverage reporting and rules

* excluding classes with test coverage violation from reporting, but added todo to keep them in mind

* Add OpenCode+qwen3-coder:30b locally generated unit tests (TO BE REVIEWED)

* Add OpenCode+qwen3-coder:30b locally generated unit tests (TO BE REVIEWED)

* Add OpenCode+qwen3-coder:30b locally generat