@@ -3,9 +3,11 @@ package de.envite.bpm.camunda.migrator.instructions;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
+import de.envite.bpm.camunda.migrator.integration.TestHelper;
 import de.envite.bpm.camunda.migrator.migration.CustomMigrationInstruction;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import org.camunda.bpm.engine.migration.MigrationInstruction;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -27,32 +29,23 @@ class MigrationInstructionCombinerTest {
   private static final String ACTIVITY_7 = "CallActivity1";
   private static final String ACTIVITY_8 = "CallActivity2";
 
-  @Mock MigrationInstruction migrationInstruction1;
-  @Mock MigrationInstruction migrationInstruction2;
-  @Mock MigrationInstruction migrationInstruction3;
-  @Mock MigrationInstruction migrationInstruction4;
+  @Mock private MigrationInstruction migrationInstruction1;
+  @Mock private MigrationInstruction migrationInstruction2;
+  @Mock private MigrationInstruction migrationInstruction3;
+  @Mock private MigrationInstruction migrationInstruction4;
 
-  MinorMigrationInstructions migrationInstructions1To2;
-
-  MinorMigrationInstructions migrationInstructions2To3;
+  private MinorMigrationInstructions migrationInstructions1To2;
+  private MinorMigrationInstructions migrationInstructions2To3;
 
   @BeforeEach()
   void setUp() {
     migrationInstructions1To2 =
-        MinorMigrationInstructions.builder()
-            .majorVersion(MAJOR_VERSION)
-            .sourceMinorVersion(1)
-            .targetMinorVersion(2)
-            .migrationInstructions(Arrays.asList(migrationInstruction1, migrationInstruction2))
-            .build();
+        TestHelper.createMinorMigrationInstructions(
+            MAJOR_VERSION, 1, 2, List.of(migrationInstruction1, migrationInstruction2));
 
     migrationInstructions2To3 =
-        MinorMigrationInstructions.builder()
-            .majorVersion(MAJOR_VERSION)
-            .sourceMinorVersion(2)
-            .targetMinorVersion(3)
-            .migrationInstructions(Arrays.asList(migrationInstruction3, migrationInstruction4))
-            .build();
+        TestHelper.createMinorMigrationInstructions(
+            MAJOR_VERSION, 2, 3, List.of(migrationInstruction3, migrationInstruction4));
   }
 
   @Test
@@ -126,5 +119,68 @@ class MigrationInstructionCombinerTest {
             migrationInstruction ->
                 migrationInstruction.getSourceActivityId() == ACTIVITY_7
                     && migrationInstruction.getTargetActivityId() == ACTIVITY_8);
+  }
+
+  @Test
+  void combineVariables_should_return_empty_map_for_empty_list() {
+    Map<String, Object> result = MigrationInstructionCombiner.combineVariables(List.of());
+
+    assertThat(result).isEmpty();
+  }
+
+  @Test
+  void combineVariables_should_return_variables_from_single_instruction() {
+    MinorMigrationInstructions instructions =
+        TestHelper.createMinorMigrationInstructions(MAJOR_VERSION, 1, 2, Map.of("key", "value"));
+
+    Map<String, Object> result =
+        MigrationInstructionCombiner.combineVariables(List.of(instructions));
+
+    assertThat(result).containsEntry("key", "value");
+  }
+
+  @Test
+  void combineVariables_should_merge_variables_from_multiple_instructions() {
+    MinorMigrationInstructions instructions1To2 =
+        TestHelper.createMinorMigrationInstructions(MAJOR_VERSION, 1, 2, Map.of("a", "1"));
+
+    MinorMigrationInstructions instructions2To3 =
+        TestHelper.createMinorMigrationInstructions(MAJOR_VERSION, 2, 3, Map.of("b", "2"));
+
+    Map<String, Object> result =
+        MigrationInstructionCombiner.combineVariables(
+            Arrays.asList(instructions1To2, instructions2To3));
+
+    assertThat(result).containsEntry("a", "1").containsEntry("b", "2");
+  }
+
+  @Test
+  void combineVariables_should_have_later_minor_version_win_on_key_conflict() {
+    MinorMigrationInstructions instructions1To2 =
+        TestHelper.createMinorMigrationInstructions(MAJOR_VERSION, 1, 2, Map.of("key", "old"));
+
+    MinorMigrationInstructions instructions2To3 =
+        TestHelper.createMinorMigrationInstructions(MAJOR_VERSION, 2, 3, Map.of("key", "new"));
+
+    Map<String, Object> result =
+        MigrationInstructionCombiner.combineVariables(
+            Arrays.asList(instructions1To2, instructions2To3));
+
+    assertThat(result).containsEntry("key", "new").hasSize(1);
+  }
+
+  @Test
+  void combineVariables_should_skip_instructions_with_null_variables() {
+    MinorMigrationInstructions withNullVariables =
+        TestHelper.createMinorMigrationInstructions(MAJOR_VERSION, 1, 2);
+
+    MinorMigrationInstructions withVariables =
+        TestHelper.createMinorMigrationInstructions(MAJOR_VERSION, 2, 3, Map.of("a", "1"));
+
+    Map<String, Object> result =
+        MigrationInstructionCombiner.combineVariables(
+            Arrays.asList(withNullVariables, withVariables));
+
+    assertThat(result).containsEntry("a", "1").hasSize(1);
   }
 }
